att typeScript input password

--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,12 @@
   //   pwd.type = chk.chec ? (pwd.type = "text") : (pwd.type = "password");
   // };
 
-  function showPassword() {
-    var pwd = document.getElementById("pwd");
-    if (pwd.type == "password") {
-      pwd.type = "text";
-    } else {
-      pwd.type = "password";
-    }
-  }
+  // function showPassword() {
+  //   var pwd = document.getElementById("pwd");
+  //   if (pwd.type == "password") {
+  //     pwd.type = "text";
+  //   } else {
+  //     pwd.type = "password";
+  //   }
+  // }
 </script>
